--- a/showplease.cabal
+++ b/showplease.cabal
@@ -11,7 +11,7 @@ Cabal-Version: >= 1.9
 
 Library
  Build-Depends:
-  base >= 4
+  base >= 4, parsec
  Exposed-Modules:
   Debug.ShowPlease
  Other-Modules:
