--- a/showplease.cabal
+++ b/showplease.cabal
@@ -14,6 +14,6 @@ Library
   base >= 4, parsec, template-haskell
  Exposed-Modules:
   Debug.Loc,
-  Debug.ShowPlease
+  Debug.Show
  Other-Modules:
-  Debug.ShowPrime
+  Debug.CopyOfShow
