--- a/showplease.cabal
+++ b/showplease.cabal
@@ -6,7 +6,7 @@ Category:       debug
 Maintainer:     David Fox <dsf@seereason.com>
 Homepage:       http://src.seereason.com/showplease
 Build-Type:     Simple
-Synopsis:       Show class with instances for types whose official show won't read
+Synopsis:       Show class with instances for types whose official Show won't Read
 Cabal-Version: >= 1.9
 
 Library
