--- a/show-please.cabal
+++ b/show-please.cabal
@@ -14,6 +14,6 @@ Cabal-Version: >= 1.9
 
 Library
  Build-Depends:
-  base >= 4, mtl, parsec, template-haskell
+  base >= 4 && < 5, mtl, parsec, template-haskell
  Exposed-Modules:
   Debug.Show
